--- a/contact.css
+++ b/contact.css
@@ -60,7 +60,7 @@
 .contact {
     width: 100%;
     height: 100vh;
-    background-image: url(../img/background2.JPG);
+    background-image: url(img/background2.JPG);
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
