--- a/registrar.css
+++ b/registrar.css
@@ -11,7 +11,7 @@ body {
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background: url(../img/logbg.jpg);
+    background: url(img/logbg.jpg);
     background-size: cover;
     padding: 10px;
     margin-top: 25px;
